# AI-Agent-for-Manufacturing

./: README.md
chatbot-be/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_metadata.py  test_repl.py
chatbot-be/blob_data/: PredictiveMaintenance_history.csv
chatbot-be/components/: agent.py  document_loader.py  embedding.py  manage_history.py  prompt_templates.py  session_verify.py  table_schema.py  tools_langchain.py
chatbot-be/components/assist_bot/: wiki_assistant.py
chatbot-be/components/tool/: blob_storage_handle.py  python_repl.py
chatbot-fe/: .gitignore  README.md  package.json  test.py  tsconfig.json
chatbot-fe/public/: index.html
chatbot-fe/src/: Router.tsx  index.tsx
chatbot-fe/src/components/Home/: Home.tsx
chatbot-fe/src/components/Home/Hometag/: Chat.css  ChatGPT.tsx  HomeContent.tsx  Logo.tsx  MenuList.tsx
chatbot-fe/src/components/LoginPage/: LoginPage.tsx
